--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,11 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_CXX_STANDARD 14)
 
 include_directories(include)
+add_library(utils
+    src/data_structure.cpp
+)
 
-set(SUBDIRS 75 77 80)
+set(SUBDIRS 75 77 two_pointers)
 FOREACH(subdir ${SUBDIRS})
   ADD_SUBDIRECTORY(${subdir})
 ENDFOREACH()
