--- a/two_pointers/CMakeLists.txt
+++ b/two_pointers/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(SUBDIRS 80 86 88 125 141 142 167 209)
+set(SUBDIRS 80 86 88 125 141 142 167 209 234)
 FOREACH(subdir ${SUBDIRS})
   ADD_SUBDIRECTORY(${subdir})
 ENDFOREACH()
