--- a/dp/CMakeLists.txt
+++ b/dp/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(SUBDIRS 91 95 96 120 121 139 152)
+set(SUBDIRS 91 95 96 120 121 139 152 198)
 FOREACH(subdir ${SUBDIRS})
   ADD_SUBDIRECTORY(${subdir})
 ENDFOREACH()
